2008-06-12  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d-util.h: added a file with utility calls
	for use when building interfaces using ClutterBox2D, for now the
	ability to maintain the relative positions of two actors.
	* clutter-box2d/clutter-box2d-util.c:
	* clutter-box2d/Makefile.am: added new files.
	* clutter-box2d/clutter-box2d.h: #include "clutter-box2d-util.h"

2008-06-12  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d-actor.cpp: added code to cope with
	multi-touch (#if 0'd out).

2008-06-07  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d-actor.cpp: changed possibly unportable
	inline definitions of on stack structure.

2008-06-06  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d-actor.cpp: store the state for pointer
	manipulation of dynamic actors in the child-meta class, in preparation
	for multi-touch.

2008-06-06  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d-actor.cpp: made the manipulatable state
	work correctly by using the boolean paramspec, also keep a reference
	to the actor to avoid the actor getting destroyed.

2008-06-03  Øyvind Kolås  <pippin@o-hand.com>

	* examples/scene-table.c: (scene_table): added a test scene with zero
	gravity and a bunch of actors colliding, this is similar to the basic
	simulation as run in stuff.
	* examples/blockbox.c: (init_scenes): added table scene.
	* examples/Makefile.am: added scene_table.

2008-06-03  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d-actor.cpp: cleaned up code to track the
	manipulatable state of actors.

2008-06-03  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d-actor.h:
	* clutter-box2d/clutter-box2d-actor.cpp: added a "manipulatable"
	property, when this property is set on an actor the actor is set
	reactive and registers handlers for press, motion and release that
	allows manipulation of dynamic physics actors using a pointer device.